# SecundusDermis

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT_MANIFEST.md  Dockerfile  README.md  _clean_up_db.py  docker-compose.local.yml  docker-compose.yml  docker-compose.yml.example  index.html  netlify.toml  package-lock.json  package.json  pytest.ini  start-ngrok-container.sh  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1756879012896-92eb4c602e422.mjs
app/: .gitignore  run.sh  (+2 more)
app/agent/: .env.example  README.md  agent_gemini.py  agent_prompts.py  agent_runtime.py  pyproject.toml
app/agent/atelier_tools/: __init__.py  adk_agent.py  tools.py
app/agent/config/: __init__.py
app/agent/secundus_agent/: __init__.py  backend_config.py  internal_api.py  main.py  remote_deps.py  sd_socket_client.py  sync_chat.py
app/agent/stylist_loop/: __init__.py  deps.py  payloads.py  stream_loop.py  ws_envelope.py  ws_tool.py
app/backend/: .env.example  Dockerfile  README.md  agent_ai_client.py  agent_api_keys.py  agent_invites.py  agent_secret_file.py  agent_socket_bridge.py  api.py  api.py.backup  auth.py  catalog_meta.py  config.py  house_agent_key.py  ingest.py  patron_shop_selection.py  pyproject.toml  requirements.txt  setup.py  shop_tools.py  smtp_mail.py  stylist_backend_bridge.py  user_experience.py  vector_store.py
app/backend/agent/: agent.py  tools.py
app/backend/frontend_dist/: index.html
app/backend/frontend_dist/assets/: index-BH7duLfK.js  index-CVIZVEg2.css  index-OHazLoQd.js
app/backend/ingest-pipeline/: README.md  requirements.txt
(+300 files in other folders)
